# matrx-microservice-template

./: .gitignore  README.md  pyproject.toml  run.py
app/api/: __init__.py
app/api/v1/: __init__.py  endpoints.py
core/: __init__.py  app.py  settings.py  socketio_app.py  system_logger.py  task_queue.py
core/scripts/: initialize_db_models.py
core/socket/: global_socket_events.py  initialize_handlers.py  user_sessions.py
core/socket/core/: app_factory.py
core/socket/services/: log_service.py
models/: response_models.py
src/: scraper_service.py
src/orm_demo/: demo.py
